Updated Index and Query module