@@ -1,10 +1,10 @@
 package com.fspann.query.core;
 
 import com.fspann.common.EncryptedPoint;
-import com.fspann.common.QueryToken;
-import com.fspann.crypto.CryptoService;
 import com.fspann.common.KeyLifeCycleService;
 import com.fspann.common.KeyVersion;
+import com.fspann.common.QueryToken;
+import com.fspann.crypto.CryptoService;
 import com.fspann.index.core.EvenLSH;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,10 +13,11 @@ import org.mockito.MockitoAnnotations;
 
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 class QueryTokenFactoryTest {
@@ -30,9 +31,18 @@ class QueryTokenFactoryTest {
     void setUp() {
         MockitoAnnotations.openMocks(this);
         SecretKey mockKey = new SecretKeySpec(new byte[16], "AES");
-        lenient().when(keyService.getCurrentVersion()).thenReturn(new KeyVersion(7, mockKey));
-        lenient().when(lsh.getBuckets(any(double[].class))).thenReturn(List.of(1, 2, 3));
-        factory = new QueryTokenFactory(cryptoService, keyService, lsh, 2, 3);
+        when(keyService.getCurrentVersion()).thenReturn(new KeyVersion(7, mockKey));
+        when(lsh.getDimensions()).thenReturn(2);
+
+        // For numTables = 3, return 3 lists of contiguous buckets
+        when(lsh.getBucketsForAllTables(any(double[].class), eq(5), eq(3)))
+                .thenReturn(List.of(
+                        Arrays.asList(1, 2, 3),
+                        Arrays.asList(4, 5, 6),
+                        Arrays.asList(7, 8, 9)
+                ));
+
+        factory = new QueryTokenFactory(cryptoService, keyService, lsh, 3);
     }
 
     @Test
@@ -40,70 +50,79 @@ class QueryTokenFactoryTest {
         double[] vector = {1.0, 2.0};
         byte[] iv = new byte[12];
         byte[] ciphertext = new byte[32];
-        when(cryptoService.encryptToPoint(eq("index"), eq(vector), any(SecretKey.class)))
-                .thenReturn(new EncryptedPoint("query", 0, iv, ciphertext, 7, vector.length, Collections.singletonList(0)));
+
+        when(cryptoService.encryptToPoint(eq("query"), eq(vector), any(SecretKey.class)))
+                .thenReturn(new EncryptedPoint("query", 0, iv, ciphertext, 7, vector.length, List.of(0)));
 
         QueryToken token = factory.create(vector, 5);
 
         assertNotNull(token);
-        assertEquals(3, token.getCandidateBuckets().size());
-        assertArrayEquals(vector, token.getPlaintextQuery());
+        assertEquals(3, token.getTableBuckets().size());
+        assertArrayEquals(vector, token.getQueryVector());
         assertEquals(5, token.getTopK());
         assertEquals(3, token.getNumTables());
-        assertEquals(String.format("epoch_%d_dim_%d", 7, vector.length), token.getEncryptionContext());
-        assertEquals(vector.length, token.getDimension());
+        assertEquals("epoch_7_dim_2", token.getEncryptionContext());
+        assertEquals(2, token.getDimension());
         assertNotNull(token.getIv());
         assertNotNull(token.getEncryptedQuery());
+
+        // spot-check expansions came from LSH
+        assertEquals(List.of(1,2,3), token.getTableBuckets().get(0));
+        assertEquals(List.of(4,5,6), token.getTableBuckets().get(1));
+        assertEquals(List.of(7,8,9), token.getTableBuckets().get(2));
     }
 
     @Test
     void testCreateTokenWithDifferentNumTables() {
-        factory = new QueryTokenFactory(cryptoService, keyService, lsh, 2, 5);
-        double[] vector = {1.0, 2.0};
-        byte[] iv = new byte[12];
-        byte[] ciphertext = new byte[32];
-        when(cryptoService.encryptToPoint(eq("index"), eq(vector), any(SecretKey.class)))
-                .thenReturn(new EncryptedPoint("query", 0, iv, ciphertext, 7, vector.length, Collections.singletonList(0)));
+        // For numTables = 5, change factory and mock
+        factory = new QueryTokenFactory(cryptoService, keyService, lsh, 5);
+        when(lsh.getBucketsForAllTables(any(double[].class), eq(5), eq(5)))
+                .thenReturn(List.of(
+                        List.of(1), List.of(2), List.of(3), List.of(4), List.of(5)
+                ));
+        when(cryptoService.encryptToPoint(eq("query"), any(double[].class), any()))
+                .thenReturn(new EncryptedPoint("query", 0, new byte[12], new byte[32], 7, 2, List.of(0)));
 
-        QueryToken token = factory.create(vector, 5);
+        QueryToken token = factory.create(new double[]{1.0, 2.0}, 5);
         assertEquals(5, token.getNumTables());
+        assertEquals(5, token.getTableBuckets().size());
     }
 
     @Test
     void testNullVectorThrowsException() {
-        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
-                factory.create(null, 5));
-        assertEquals("Input vector must be non-null and non-empty", ex.getMessage());
+        assertThrows(IllegalArgumentException.class, () -> factory.create(null, 5));
     }
 
     @Test
     void testEmptyVectorThrowsException() {
-        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
-                factory.create(new double[0], 5));
-        assertEquals("Input vector must be non-null and non-empty", ex.getMessage());
+        assertThrows(IllegalArgumentException.class, () -> factory.create(new double[0], 5));
     }
 
     @Test
     void testTopKZeroThrowsException() {
-        double[] vector = {1.0, 2.0};
-        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
-                factory.create(vector, 0));
-        assertEquals("topK must be greater than zero", ex.getMessage());
+        assertThrows(IllegalArgumentException.class, () -> factory.create(new double[]{1.0, 2.0}, 0));
     }
 
     @Test
     void testNegativeTopKThrowsException() {
-        double[] vector = {1.0, 2.0};
-        assertThrows(IllegalArgumentException.class, () -> factory.create(vector, -1));
+        assertThrows(IllegalArgumentException.class, () -> factory.create(new double[]{1.0, 2.0}, -1));
+    }
+
+    @Test
+    void testDimensionMismatchThrows() {
+        when(lsh.getDimensions()).thenReturn(3); // factory expects 3D, we pass 2D
+        assertThrows(IllegalArgumentException.class, () -> factory.create(new double[]{1.0, 2.0}, 5));
     }
 
     @Test
     void testInvalidConstructorThrowsException() {
         assertThrows(IllegalArgumentException.class, () ->
-                new QueryTokenFactory(cryptoService, keyService, lsh, -1, 3));
-        assertThrows(IllegalArgumentException.class, () ->
-                new QueryTokenFactory(cryptoService, keyService, lsh, 2, 0));
+                new QueryTokenFactory(cryptoService, keyService, lsh, 0));
         assertThrows(NullPointerException.class, () ->
-                new QueryTokenFactory(null, keyService, lsh, 2, 3));
+                new QueryTokenFactory(null, keyService, lsh, 3));
+        assertThrows(NullPointerException.class, () ->
+                new QueryTokenFactory(cryptoService, null, lsh, 3));
+        assertThrows(NullPointerException.class, () ->
+                new QueryTokenFactory(cryptoService, keyService, null, 3));
     }
 }
